--- a/css/slick-theme.css
+++ b/css/slick-theme.css
@@ -2,7 +2,7 @@
 /* Slider */
 .slick-loading .slick-list
 {
-    background: #fff url('./ajax-loader.gif') center center no-repeat;
+    background: rgb(243, 224, 224) url('./ajax-loader.gif') center center no-repeat;
 }
 
 /* Icons */
