--- a/css/style.css
+++ b/css/style.css
@@ -413,7 +413,7 @@ textarea.input {
 #top-header {
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: #1E1F29;
+  background-color: #13163a;
 }
 
 .header-links li {
@@ -427,15 +427,15 @@ textarea.input {
 }
 
 .header-links li a {
-  color: #FFF;
+  color: rgba(255, 255, 255, 0.644);
 }
 
 .header-links li a:hover {
-  color: #D10024;
+  color: #c42943;
 }
 
 .header-links li i {
-  color: #D10024;
+  color: #af3146;
   margin-right: 5px;
 }
 
@@ -446,7 +446,7 @@ textarea.input {
 #header {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #15161D;
+  background-color: #32524dde;
 }
 
 .header-logo {
@@ -482,7 +482,7 @@ textarea.input {
 .header-search form .search-btn {
   height: 40px;
   width: 100px;
-  background: #D10024;
+  background: #b43046;
   color: #FFF;
   font-weight: 700;
   border: none;
@@ -602,7 +602,7 @@ textarea.input {
 
 .cart-dropdown .cart-btns>a:first-child {
   margin-right: -4px;
-  background-color: #1e1f29;
+  background-color: #3a3d61;
 }
 
 .cart-dropdown .cart-btns>a:hover {
@@ -725,7 +725,7 @@ textarea.input {
   bottom: 0;
   left: 0px;
   width: 60%;
-  background: #D10024;
+  background: #61d3d3;
   opacity: 0.9;
   -webkit-transform: skewX(-45deg);
   -ms-transform: skewX(-45deg);
@@ -748,7 +748,7 @@ textarea.input {
 
 .shop .shop-img {
   position: relative;
-  background-color: #E4E7ED;
+  background-color: #e4e7edbb;
   z-index: -1;
 }
 
@@ -788,7 +788,7 @@ textarea.input {
 #hot-deal.section {
   padding: 60px 0px;
   margin: 30px 0px;
-  background-color: #E4E7ED;
+  background-color: #e4e7edb0;
   background-image: url('../img/hotdeal.png');
   background-position: center;
   background-repeat: no-repeat;
@@ -807,7 +807,7 @@ textarea.input {
   display: inline-block;
   width: 100px;
   height: 100px;
-  background: #D10024e6;
+  background: #d10023b7;
   text-align: center;
   border-radius: 50%;
   margin: 0px 5px;
@@ -1041,7 +1041,7 @@ textarea.input {
   border: 2px solid transparent;
   height: 40px;
   padding: 0 30px;
-  background-color: #ef233c;
+  background-color: #ca4a59;
   color: #FFF;
   text-transform: uppercase;
   font-weight: 700;
@@ -1057,7 +1057,7 @@ textarea.input {
   width: 40px;
   height: 40px;
   line-height: 38px;
-  color: #D10024;
+  color: #aa273d;
   opacity: 0;
   visibility: hidden;
 }
@@ -1249,7 +1249,7 @@ textarea.input {
 }
 
 .noUi-connect {
-  background-color: #D10024;
+  background-color: #c51e39;
 }
 
 .noUi-horizontal {
@@ -1311,7 +1311,7 @@ textarea.input {
   height: 40px;
   line-height: 40px;
   background-color: #FFF;
-  border: 1px solid #E4E7ED;
+  border: 2px solid #E4E7ED;
   text-align: center;
   -webkit-transition: 0.2s all;
   transition: 0.2s all;
@@ -1361,11 +1361,11 @@ textarea.input {
 
 .store-pagination li:hover {
   background-color: #E4E7ED;
-  color: #D10024;
+  color: #cf2b47;
 }
 
 .store-pagination li.active {
-  background-color: #D10024;
+  background-color: #d11937;
   border-color: #D10024;
   color: #FFF;
   font-weight: 500;
@@ -1430,7 +1430,7 @@ textarea.input {
 }
 
 #product-imgs .product-preview.slick-current {
-  border-color: #D10024;
+  border-color: #ca1c39;
 }
 
 #product-imgs .slick-prev {
